# lottery_service

./: .env.docker.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  ruff.toml
.github/workflows/: tests.yml
apps/api/: urls.py
apps/api/filters/: __init__.py  winner.py
apps/api/serializers/: __init__.py  ballot.py  lottery.py  register.py  winner.py
apps/api/tests/: conftest.py  test_views.py
apps/api/v1/: ballot.py  lottery.py  register.py  winner.py
apps/lottery/: apps.py  models.py  tasks.py
apps/lottery/admin/: __init__.py  ballot.py  lottery.py  winner.py
apps/lottery/management/commands/: create_lottery.py  create_test_data.py  draw_winner.py  setup_periodic_tasks.py  submit_ballot.py
apps/lottery/migrations/: 0001_initial.py
apps/lottery/tests/: conftest.py  test_models.py  test_tasks.py
config/: celery.py  settings.py  urls.py
