[project]
name = "lottery-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Grigori Kartashyan",email = "grigori.kartashyan@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "django (>=5.2.11,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-dotenv (>=1.4.2,<2.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "celery[redis] (>=5.6.2,<6.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "drf-yasg (>=1.21.14,<2.0.0)"
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.2"
pytest-cov = "^6.0"

[tool.coverage.run]
omit = ["apps/*/management/commands/*.py"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
